--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   browser: '>=0.10.0 <0.11.0'
   dart_to_js_script_rewriter: '^0.1.0'
-  angular2: '2.0.0-alpha.46'
+  angular2: '2.0.0-beta.0'
 
 transformers:
     - angular2:
